fix/footer overflow fix

--- a/public/sass/components/footer.scss
+++ b/public/sass/components/footer.scss
@@ -10,3 +10,7 @@
     }
   }
 }
+
+.footerContainer{
+  // width: 90vw;
+}
